Code restructuring, some adjustments, added documentation.