@@ -18,25 +18,39 @@ import java.util.Arrays;
 import java.util.List;
 
 public class EnemyControl extends GameController implements FighterControl {
-    private final Enemy enemy;
-    private Fighter target;
+    private final Enemy enemy; // Referência ao inimigo controlado
+    private Fighter target; // Alvo atual do inimigo
 
+    // Construtor que inicializa o controlador com o modelo do jogo e o inimigo
     public EnemyControl(GameModel gameModel, Enemy enemy) {
         super(gameModel);
         this.enemy = enemy;
     }
 
+    /**
+     * Método principal para executar as ações do inimigo, incluindo seleção de alvo,
+     * movimentação e ataque.
+     *
+     * @param application Instância da aplicação principal.
+     * @param screen O ecrã onde os elementos do jogo são apresentados.
+     * @param viewer O visualizador que gere a interface gráfica do jogo.
+     */
     public void run(Application application, Screen screen, Viewer viewer) throws IOException, UnsupportedAudioFileException, LineUnavailableException {
         GameModel gameModel = (GameModel) super.getModel();
+
+        // Cria uma lista com o jogador e os aliados para escolher como alvo
         List<Fighter> alliesAndPlayer = new ArrayList<>();
         alliesAndPlayer.add(gameModel.getPlayer());
         alliesAndPlayer.addAll(gameModel.getAllyList());
 
+        // Seleciona o alvo mais próximo
         target = selectTarget(screen, alliesAndPlayer, (GameViewer) viewer);
+
         GameViewer gameViewer = (GameViewer) viewer;
         long time = System.currentTimeMillis();
         long timer = 1000;
 
+        // Atualiza o ecrã e executa as ações do inimigo
         gameViewer.draw(screen);
         time = application.waiting(time, timer);
         move(application, screen);
@@ -44,55 +58,85 @@ public class EnemyControl extends GameController implements FighterControl {
         time = application.waiting(time, timer);
         gameViewer.drawFighterCombatPhase(screen, enemy, target);
         application.waiting(time, timer);
+
+        // Ataca o alvo
         fire(target, gameViewer);
     }
 
-    public void move(Application application, Screen screen){
+    /**
+     * Método responsável por movimentar o inimigo para a posição mais vantajosa.
+     *
+     * @param application A instância da aplicação principal.
+     * @param screen O ecrã onde os elementos do jogo são apresentados.
+     */
+    public void move(Application application, Screen screen) {
         GameModel gameModel = (GameModel) super.getModel();
         Position currentPosition = enemy.getPosition();
-        List<Position> adjacentPositions = Arrays.asList(new Position(currentPosition.getX() + 1, currentPosition.getY()),
-                new Position(currentPosition.getX() - 1, currentPosition.getY()),
-                new Position(currentPosition.getX(), currentPosition.getY()  + 1),
-                new Position(currentPosition.getX(), currentPosition.getY() - 1));
+
+        // Define as posições adjacentes ao inimigo
+        List<Position> adjacentPositions = Arrays.asList(
+            new Position(currentPosition.getX() + 1, currentPosition.getY()),
+            new Position(currentPosition.getX() - 1, currentPosition.getY()),
+            new Position(currentPosition.getX(), currentPosition.getY() + 1),
+            new Position(currentPosition.getX(), currentPosition.getY() - 1)
+        );
 
         Position best = null;
-        int aim_penalty = 0;     //Senseless value, to change
+        int aim_penalty = 0; // Valor para determinar a melhor posição (penalidade)
 
-        for(Position pos : adjacentPositions){
+        // Avalia as posições adjacentes para encontrar a mais vantajosa
+        for (Position pos : adjacentPositions) {
             int pos_aim_penalty = gameModel.aimPenaltyCalculator(pos, target.getPosition());
-            if(best == null && gameModel.elementCanBePlaced(pos)){
+            if (best == null && gameModel.elementCanBePlaced(pos)) {
                 best = pos;
                 aim_penalty = pos_aim_penalty;
-            }
-
-            else if(pos_aim_penalty < aim_penalty && gameModel.elementCanBePlaced(pos)){
+            } else if (pos_aim_penalty < aim_penalty && gameModel.elementCanBePlaced(pos)) {
                 best = pos;
                 aim_penalty = pos_aim_penalty;
             }
         }
+
+        // Atualiza a posição do inimigo
         enemy.setPosition(best);
     }
 
-    public Fighter selectTarget(Screen screen, List<Fighter> targets, GameViewer gameViewer){
+    /**
+     * Seleciona o alvo mais próximo da lista fornecida.
+     *
+     * @param screen O ecrã onde os elementos do jogo são apresentados.
+     * @param targets A lista de possíveis alvos.
+     * @param gameViewer O visualizador para mostrar o estado atual.
+     * @return O lutador mais próximo.
+     */
+    public Fighter selectTarget(Screen screen, List<Fighter> targets, GameViewer gameViewer) {
         GameModel gameModel = (GameModel) super.getModel();
-        Fighter closest = targets.getFirst();
+        Fighter closest = targets.get(0); // Assume o primeiro alvo como o mais próximo inicialmente
 
-        for(Fighter fighter : targets){
-            if(gameModel.getDistance(enemy.getPosition(), fighter.getPosition()) < gameModel.getDistance(enemy.getPosition(), closest.getPosition()))
+        // Procura o alvo mais próximo baseado na distância
+        for (Fighter fighter : targets) {
+            if (gameModel.getDistance(enemy.getPosition(), fighter.getPosition()) < 
+                gameModel.getDistance(enemy.getPosition(), closest.getPosition())) {
                 closest = fighter;
-
+            }
         }
         return closest;
     }
 
+    /**
+     * Realiza um ataque ao alvo selecionado.
+     *
+     * @param target O lutador que será atacado.
+     * @param gameViewer O visualizador para mostrar o resultado do ataque.
+     */
     public void fire(Fighter target, GameViewer gameViewer) throws UnsupportedAudioFileException, LineUnavailableException, IOException {
         GameModel gameModel = (GameModel) super.getModel();
 
-        if(gameModel.hitOrMiss(enemy, target)){
-            gameViewer.hitSound();
-            target.setHitPoints(target.getHitPoints() - gameModel.damageCalculator(enemy, target.getPosition()));
+        // Verifica se o ataque foi bem-sucedido
+        if (gameModel.hitOrMiss(enemy, target)) {
+            gameViewer.hitSound(); // Toca som de acerto
+            target.setHitPoints(target.getHitPoints() - gameModel.damageCalculator(enemy, target.getPosition())); // Reduz os pontos de vida do alvo
             return;
         }
-        gameViewer.missSound();
+        gameViewer.missSound(); // Toca som de falha
     }
 }
